--- a/TODOs.org
+++ b/TODOs.org
@@ -8,7 +8,11 @@
 ** FIX API
 ** DONE use minitest
    CLOSED: [2019-02-26 Tue] SCHEDULED: <2019-02-26 Tue>
-** extract HTTP client
+** DONE extract HTTP client
+   CLOSED: [2019-04-23 Tue 15:24]
+   :LOGBOOK:
+   CLOCK: [2019-04-23 Tue 14:31]--[2019-04-23 Tue 15:18] =>  0:47
+   :END:
 ** DONE public Websocket API
    CLOSED: [2019-04-02 Tue 13:12] SCHEDULED: <2019-03-29 Fri>
    :LOGBOOK:
@@ -22,13 +26,15 @@
    :END:
 ** response middleware
 ** check key/secret present for private endpoints
-** fix trade history
+** DONE fix trade history
+   CLOSED: [2019-04-23 Tue 15:17]
 ** research async websocket implementation
-** cleaup 'params' for both http and websocket
+** cleanup 'params' for both http and websocket
 ** TODO Deribit implementation
-   SCHEDULED: <2019-04-23 Tue +1w>
+   SCHEDULED: <2019-04-30 Tue +1w>
    :PROPERTIES:
-   :LAST_REPEAT: [2019-04-17 Wed 18:26]
+   :LAST_REPEAT: [2019-04-23 Tue 15:24]
    :END:
+   - State "DONE"       from "TODO"       [2019-04-23 Tue 15:24]
    - State "DONE"       from "TODO"       [2019-04-17 Wed 18:26]
    - State "DONE"       from "TODO"       [2019-04-02 Tue 13:02]
