--- a/TODOs.org
+++ b/TODOs.org
@@ -30,11 +30,13 @@
    CLOSED: [2019-04-23 Tue 15:17]
 ** research async websocket implementation
 ** cleanup 'params' for both http and websocket
+** update buy/sell endpoints with new params
 ** TODO Deribit implementation
-   SCHEDULED: <2019-04-30 Tue +1w>
+   SCHEDULED: <2019-08-02 Tue +1m>
    :PROPERTIES:
-   :LAST_REPEAT: [2019-04-23 Tue 15:24]
+   :LAST_REPEAT: [2019-07-02 Tue 13:01]
    :END:
+   - State "DONE"       from "TODO"       [2019-07-02 Tue 13:01]
    - State "DONE"       from "TODO"       [2019-04-23 Tue 15:24]
    - State "DONE"       from "TODO"       [2019-04-17 Wed 18:26]
    - State "DONE"       from "TODO"       [2019-04-02 Tue 13:02]
