--- a/TODOs.org
+++ b/TODOs.org
@@ -31,8 +31,8 @@
 ** research async websocket implementation
 ** cleanup 'params' for both http and websocket
 ** update buy/sell endpoints with new params
-** TODO Deribit implementation
-   SCHEDULED: <2019-08-02 Tue +1m>
+** TODO deribit-api-ruby maintenance
+   SCHEDULED: <2019-10-09 Tue +2m>
    :PROPERTIES:
    :LAST_REPEAT: [2019-07-02 Tue 13:01]
    :END:
